[MIN] JDK 21 rewritings