@@ -111,7 +111,7 @@ final class WordnetStemmer extends Stemmer {
   protected byte[] stem(final byte[] word) {
     @SuppressWarnings("unchecked")
     final List<String> l = (List<String>) Reflect.invoke(FIND_STEMS, stemmer, string(word));
-    final byte[] result = l.isEmpty() ? word : token(l.get(0));
+    final byte[] result = l.isEmpty() ? word : token(l.getFirst());
     return result.length == 0 ? word : result;
   }
 }
